# stellar_coordinates

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
data/: get_data.py  pyrallaxes.py  requirements.txt  test.py
data/catalogs/: .gitignore
src/: GPUInstanceing.rs  chunk.rs  cursor.rs  gpu_instancing.rs  main.rs  util.rs
src/chunk/: octant.rs  particle.rs  util.rs
