[package]
name = "stellar_coordinates_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.7.0"
bevy = { version = "0.7.0", features = ["dynamic"] } # faster compilation, turn of for final release
bevy-inspector-egui = "0.10.0"
csv = "1.1"
serde = { version = "1", features =["derive"] }
crossbeam-channel = "0.5.0"
bytemuck = "1.7.2"
smooth-bevy-cameras = "0.4.0"
flate2 = "1.0.24"
rayon = "1.5.3"
bevy_prototype_debug_lines = { version = "0.7", features = ["3d"] }
itertools = "0.10.3"
byteorder = "1.4.3"
serde_json = "1.0.81"
bit-set = "0.5.2"

[profile.release]
debug = true

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

